objects/ssot__LearnerProgramRequirement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learner Program Requirement Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerProgramId__c</fullName>
        <label>Learner Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningProgramPlanRqmtId__c</fullName>
        <label>Learning Program Plan Requirement</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819809315_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProgramRequirement_LearningPr_rel</label>
        <referenceTo>ssot__LearningProgramPlanRqmt__dlm</referenceTo>
        <relationshipLabel>LearnerProgramRequirement_LearningPr_rel</relationshipLabel>
        <relationshipName>rel_1719819809315_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719820315301_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProgramRequirement_LearnerPro_rel</label>
        <referenceTo>ssot__LearnerProgram__dlm</referenceTo>
        <relationshipLabel>LearnerProgramRequirement_LearnerPro_rel</relationshipLabel>
        <relationshipName>rel_1719820315301_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>